# EarthSciIO

./: .gitignore  DOLT_REMOTE.md  README.md  conftest.py  manifest  pyproject.toml  vgcloet0vimjurfdfmimh5k4reeqjtra.darc
.github/workflows/: conformance.yml
conformance/: CROSSLANG.md  README.md  crosscheck.py  crosscheck_write.py  ff10_oracle_emissions.jl  gen_write_spec.py  generate.py  run_conformance.sh  run_write_conformance.sh  verify.py  write_spec.json  write_spec_wasm.json
conformance/corpus/: cases.json
conformance/corpus/cases/: era5-grid-sub-tile.json  ff10-point-slice.json  isrm-zarr-tile.json  openaq-points-slice.json  permuted-order-tile.json
conformance/dumpers/: codec_weakdeps.jl  dump_julia.jl  dump_python.py  read_julia.jl  read_python.py  write_julia.jl  write_python.py
earthsciio/: __init__.py  auth.py  cache.py  cachekey.py  config.py  era5.py  errors.py  manifest.py  native.py  provider.py  readers.py  registry.py  transport.py  validate.py
earthsciio/backends/: __init__.py  cds.py  file.py  http.py  local.py  s3.py  zarr.py  zarr_write.py
julia/: .gitignore  Project.toml  README.md
julia/ext/: EarthSciIOBloscExt.jl  EarthSciIOTiffImagesExt.jl  EarthSciIOZstdExt.jl
julia/src/: EarthSciIO.jl  cache.jl  cds.jl  era5.jl  manifest.jl  provider.jl  readers.jl  registries.jl  store.jl  transport.jl  writer.jl  zarr.jl  zarr_write.jl
julia/test/: runtests.jl  test_cache.jl  test_cds.jl  test_concurrency.jl  test_conformance.jl  test_geotiff_reader.jl  test_http.jl  test_provider.jl  test_readers.jl  test_registries.jl  test_zarr.jl  zarr_write_test.jl
julia/test/fixtures/: elev_projected.tif  fuel_model_geographic.tif
rust/: Cargo.toml  README.md
rust/examples/: conformance_dump.rs  conformance_write.rs
rust/src/: auth.rs  cache.rs  clock.rs  datadir.rs  era5.rs  error.rs  key.rs  lib.rs  manifest.rs  offline.rs  provider.rs  validate.rs
rust/src/format/: ff10.rs  geotiff.rs  mod.rs  netcdf.rs  zarr.rs  zarr_object_store.rs  zarr_store.rs  zarr_write.rs
rust/src/store/: local.rs  mod.rs
rust/src/transport/: cds.rs  file.rs  http.rs  mod.rs  s3.rs
rust/tests/: cds_transport_offline.rs  concurrency_lock.rs  conformance_decode.rs  conformance_reuse.rs  fetch_cache_offline.rs  provider_cadence.rs  zarr_object_store_roundtrip.rs  zarr_read_store.rs  zarr_roundtrip.rs
spec/: README.md  cache-format.md  cloud-future.md  conformance.md  offline-mode.md  registries.json  registries.md
spec/schemas/: cache-case.schema.json  manifest.schema.json  native-field.schema.json
tests/: conftest.py  test_auth.py  test_cachekey.py  test_cds_cache_integration.py  test_cds_transport.py  test_concurrency.py  test_config_datadir.py  test_era5_request.py  test_fetch_cache_offline.py  test_geotiff_reader.py  test_http.py  test_manifest.py  test_provider.py  test_readers.py  test_registry_dispatch.py  test_registry_dispatch_active.py  test_s3_transport.py  test_validate.py  test_zarr_reader.py  test_zarr_write.py
