[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "earthsciio"
version = "0.1.0"
description = "EarthSciIO — Python data-provider core: URL download + shared content-addressed cache behind the ESS opener/fetcher seam."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "EarthSciML" }]
dependencies = [
    "numpy>=1.21",
    "requests>=2.20",
]

[project.optional-dependencies]
# Format readers that need heavier stacks are optional so the cache/transport
# core installs lean. The readers import these lazily (only when used).
netcdf = ["xarray>=2022.3", "netCDF4>=1.5"]
# GeoTIFF reader: rasterio (GDAL) is the spec-preferred backend; the reader also
# falls back to pure-Python tifffile when GDAL is unavailable.
geotiff = ["rasterio>=1.3"]
# Zarr reader + writer: zarr-python 3.x natively handles Zarr v3 sharding and v2,
# the Blosc/zstd codecs, and the store abstraction; fsspec supplies the filesystem
# seam (local + object stores). Imported lazily so a base install stays lean.
# NOTE: zarr>=3 requires Python >=3.11 (the reader/writer are gated to that);
# a 3.9/3.10 install gets the lean core without the zarr extra.
zarr = ["zarr>=3", "fsspec>=2023.1", "numcodecs>=0.13"]
# S3 (object-store) read/write: s3fs (+ fsspec) back the streaming writer's
# s3:// output and the S3ObjectStore. Optional so the core transport stays SDK-free.
s3 = ["s3fs>=2023.1", "fsspec>=2023.1"]
test = ["pytest>=7", "jsonschema>=4", "referencing>=0.30"]

[tool.setuptools.packages.find]
include = ["earthsciio*"]

[tool.pytest.ini_options]
# Make the in-repo `earthsciio` package importable without an install step so
# the refinery (and any contributor) can run `pytest` straight from a checkout.
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
