[package]
name = "earthsciio"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT"
description = "EarthSciIO Rust core: URL download + shared content-addressed cache (transport/store registries, offline mode)."
repository = "https://github.com/earthsci/earthsciio"
readme = "README.md"
keywords = ["earth-science", "cache", "data-loader", "netcdf", "offline"]
categories = ["caching", "science", "filesystem"]

# First data-loader machinery in the Rust track (component (a) of esio-9nb.6).
# Implements the language-neutral spec under ../spec: the shared cache + manifest
# format, the transport + store registries, EARTHSCIDATADIR resolution, offline
# mode, ETag/checksum/TTL validation, and the concurrency contract (advisory
# flock + atomic rename). Format readers (native arrays) are component (b).

[dependencies]
sha2 = "0.10"                                          # cache key + content integrity (sha256)
serde = { version = "1", features = ["derive"] }       # manifest (de)serialization
serde_json = "1"                                        # manifest JSON (matches the Python writer)
fs2 = "0.4"                                             # advisory file lock (flock) — spec §6
tempfile = "3"                                          # tmp/<uuid>.part staging on the cache filesystem
time = { version = "0.3", default-features = false, features = ["std", "formatting", "parsing", "macros"] }  # RFC 3339 fetched_at + TTL math

# HTTP(S) transport. rustls-tls pulls the *ring* crypto provider, which builds
# with a C compiler alone (no clang/bindgen) — so https works out of the box.
# default-features = false drops reqwest's native-tls (OpenSSL) default.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Pure-Rust GeoTIFF decode for the `geotiff` format reader (the USGS 3DEP /
# LANDFIRE rasters). No GDAL/FFI — same "C compiler alone, no clang/bindgen"
# build story as the rustls transport and the pure-Rust netcdf reader. 0.11
# retains unknown IFD tags (ModelPixelScale/Tiepoint) that 0.9 dropped, so the
# GeoTIFF georef axes (lon/lat) decode like the Python/Julia readers.
tiff = "0.11"

# Pure-Rust NetCDF decode for the `netcdf` format reader. This fork of
# netcdf-reader (path dep on the sibling checkout — nothing vendored) reads BOTH
# NetCDF-3 classic AND NetCDF-4 / HDF5 (superblock v2, deflate/shuffle), with no
# C/libnetcdf/HDF5 dependency — the same "C compiler alone, no clang/bindgen"
# build story as the rustls transport and the geotiff reader. It uses `unsafe`
# internally (memmap), but that is the dependency's code, not this crate's, so
# it is compatible with this crate's `#![forbid(unsafe_code)]`.
netcdf-reader = { path = "../../netcdf-rust/netcdf-reader", default-features = false, features = ["netcdf4"] }

[dev-dependencies]
# Concurrency + mock-HTTP tests use only std (threads, TcpListener) — no extra deps.
