[package]
name = "earthsciio"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT"
description = "EarthSciIO Rust core: URL download + shared content-addressed cache (transport/store registries, offline mode)."
repository = "https://github.com/earthsci/earthsciio"
readme = "README.md"
keywords = ["earth-science", "cache", "data-loader", "netcdf", "offline"]
categories = ["caching", "science", "filesystem"]

# First data-loader machinery in the Rust track (component (a) of esio-9nb.6).
# Implements the language-neutral spec under ../spec: the shared cache + manifest
# format, the transport + store registries, EARTHSCIDATADIR resolution, offline
# mode, ETag/checksum/TTL validation, and the concurrency contract (advisory
# flock + atomic rename). Format readers (native arrays) are component (b).

[dependencies]
sha2 = "0.10"                                          # cache key + content integrity (sha256)
serde = { version = "1", features = ["derive"] }       # manifest (de)serialization
serde_json = "1"                                        # manifest JSON (matches the Python writer)
fs2 = "0.4"                                             # advisory file lock (flock) — spec §6
tempfile = "3"                                          # tmp/<uuid>.part staging on the cache filesystem
time = { version = "0.3", default-features = false, features = ["std", "formatting", "parsing", "macros"] }  # RFC 3339 fetched_at + TTL math

# HTTP(S) transport. rustls-tls pulls the *ring* crypto provider, which builds
# with a C compiler alone (no clang/bindgen) — so https works out of the box.
# default-features = false drops reqwest's native-tls (OpenSSL) default.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Pure-Rust GeoTIFF decode for the `geotiff` format reader (the USGS 3DEP /
# LANDFIRE rasters). No GDAL/FFI — same "C compiler alone, no clang/bindgen"
# build story as the rustls transport and the pure-Rust netcdf reader. 0.11
# retains unknown IFD tags (ModelPixelScale/Tiepoint) that 0.9 dropped, so the
# GeoTIFF georef axes (lon/lat) decode like the Python/Julia readers.
tiff = "0.11"

# Pure-Rust CSV + Zip decode for the `ff10` point reader. `csv` gives RFC-4180
# quote handling (the free-text FACILITY_NAME may embed the delimiter); `zip`
# extracts a named member from the `2016fd_inputs_point.zip` blob reader-side (the
# member is reader config, never part of the cache key). Both are pure Rust — the
# same "C compiler alone, no clang/bindgen" build story as the rest of the crate.
csv = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

# ============================================================================
# Zarr v3/v2 read + write via the mainstream `zarrs` crate (streaming-output-
# sinks RFC, Wave 4 "streaming-rust-libs"). This REPLACES the former hand-rolled
# blosc1 container decoder + `lz4_flex` path (git history: rust/src/format/zarr.rs
# used to decode the 16-byte blosc header + inverse byte-shuffle by hand).
#
# Why the change: the RFC's Zarr **v3 sharded** writer (blosc-zstd inner chunks,
# crc32c shard index, `sharding_indexed` codec) is far past what a hand-rolled
# decoder can sanely track, and `zarrs` is the reference Rust Zarr implementation
# (v3 sharding + codecs + v2 read). The crate's own code stays `#![forbid(unsafe_code)]`
# (that attribute governs THIS crate only; dependencies using `unsafe` internally
# is fine and does not break it).
#
# ---------------------------------------------------------------------------
# *** BUILD-STORY CHANGE — READ THIS ***
# The former "C compiler alone, NO C libraries" story is NARROWED, on purpose,
# per the user's explicit direction to adopt a 3rd-party library. `zarrs`'s
# default codec set builds two vendored C libraries from source:
#   * `zstd-sys`  (bundled zstd 1.5.x C source) — the zstd codec, and
#   * `blosc-src` (bundled c-blosc C source)    — the blosc codec (lz4 + zstd).
# Both compile with a **C compiler alone** (the vendored `cc`-driven build; no
# clang, no bindgen, no system libzstd/libblosc, no pkg-config) — so the crate
# still builds on a stock `cc`/`gcc` toolchain with NO clang. What changed vs.
# before is only that a C **compiler** is now REQUIRED at build time for these
# two vendored libraries (previously the zarr path was pure Rust). crc32c and
# sharding are pure Rust. `#![forbid(unsafe_code)]` in this crate is unaffected.
# ---------------------------------------------------------------------------
#
# Default features pulled in (see the `[features] default` list in zarrs):
#   filesystem (local read/write store), blosc, crc32c, sharding, zstd, gzip,
#   transpose, ndarray. `blosc`+`crc32c`+`sharding` are exactly what the RFC's
#   v3 sharded blosc-zstd+crc32c layout needs; `filesystem` backs the local
#   writer + the round-trip test; v2 read (the pinned ISRM corpus store) is
#   built in (zarrs converts v2 blosc metadata to a v3 codec chain on open).
zarrs = "0.23"

# Pure-Rust NetCDF decode for the `netcdf` format reader. This fork of
# netcdf-reader (path dep on the sibling checkout — nothing vendored) reads BOTH
# NetCDF-3 classic AND NetCDF-4 / HDF5 (superblock v2, deflate/shuffle), with no
# C/libnetcdf/HDF5 dependency — the same "C compiler alone, no clang/bindgen"
# build story as the rustls transport and the geotiff reader. It uses `unsafe`
# internally (memmap), but that is the dependency's code, not this crate's, so
# it is compatible with this crate's `#![forbid(unsafe_code)]`.
netcdf-reader = { path = "../../netcdf-rust/netcdf-reader", default-features = false, features = ["netcdf4"] }

[dev-dependencies]
# Concurrency + mock-HTTP tests use only std (threads, TcpListener) — no extra deps.
